plugins {
  alias(libs.plugins.spring.boot) apply false
  alias(libs.plugins.spring.dependency.management)
  alias(libs.plugins.spotless)
  alias(libs.plugins.errorprone)
  alias(libs.plugins.springdoc.openapi.gradle) apply false
  id 'java-library'
  id 'checkstyle'
  id 'idea'
}

import net.ltgt.gradle.errorprone.CheckSeverity

allprojects {
  group = 'com.tissue'
  version = '0.0.1-SNAPSHOT'

  repositories {
    mavenCentral()
  }
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'java-library'
  apply plugin: 'org.springframework.boot'
  apply plugin: 'io.spring.dependency-management'
  apply plugin: 'com.diffplug.spotless'
  apply plugin: 'net.ltgt.errorprone'
  apply plugin: 'checkstyle'

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(21)
      vendor = JvmVendorSpec.BELLSOFT
    }
  }

  configurations {
    compileOnly {
      extendsFrom annotationProcessor
    }
  }

  dependencies {
    implementation platform(libs.spring.boot.dependencies)

    implementation libs.swagger.annotations

    compileOnly libs.lombok
    annotationProcessor libs.lombok
    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    errorprone libs.nullaway
    errorprone libs.errorprone.core

    testImplementation libs.spring.boot.starter.test
    testImplementation libs.spring.security.test
    testRuntimeOnly libs.junit.platform.launcher
  }

  test {
    useJUnitPlatform()
  }

  spotless {
    java {
      toggleOffOn()
      palantirJavaFormat('2.83.0')
      removeUnusedImports()
      trimTrailingWhitespace()
      endWithNewline()
    }
  }

  checkstyle {
    maxWarnings = 0
    configFile = file("${rootDir}/config/checkstyle/google_checks.xml")
    configProperties = [
      'org.checkstyle.google.severity'                : 'warning',
      'org.checkstyle.google.suppressionfilter.config': "${rootDir}/config/checkstyle/checkstyle-suppressions.xml"
    ]
    toolVersion = libs.versions.checkstyle.get()
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.errorprone {
        check("NullAway", CheckSeverity.ERROR)
        option("NullAway:AnnotatedPackages", "com.tissue")
        option("NullAway:ExcludedFieldAnnotations",
          "jakarta.persistence.Id," +
            "jakarta.persistence.Column," +
            "jakarta.persistence.OneToOne," +
            "jakarta.persistence.OneToMany," +
            "jakarta.persistence.ManyToOne," +
            "jakarta.persistence.ManyToMany," +
            "jakarta.persistence.Version," +
            "jakarta.persistence.PersistenceContext," +
            "org.springframework.data.annotation.CreatedDate," +
            "org.springframework.data.annotation.LastModifiedDate," +
            "org.springframework.data.annotation.CreatedBy," +
            "org.springframework.data.annotation.LastModifiedBy," +
            "org.springframework.beans.factory.annotation.Autowired," +
            "org.springframework.beans.factory.annotation.Value," +
            "org.mockito.Mock," +
            "org.mockito.InjectMocks"
        )
      }
  }

  tasks.named("compileTestJava").configure {
    options.errorprone.disable("NullAway")
  }
}
